@@ -79,6 +79,10 @@ Bug Fixes
 * ``bzr remove-tree`` can now remove multiple working trees.
   (Jared Hance, Andrew Bennetts, #253137)
 
+* ``bzr resolve --take-{this|other}`` now correctly rename the kept file
+  on content conflicts where one side deleted the file.
+  (Vincent Ladeuil, #529968)
+
 * ``bzr upgrade`` now names backup directory as ``backup.bzr.~N~`` instead
   of ``backup.bzr``. This directory is ignored by bzr commands such as
   ``add``.
